--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,6 +2,102 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+@import './assets/variables';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// Dashboard Styles
+.table-responsive.bordered {
+  @extend .border, .rounded;
+
+  .mat-table tr.mat-row:last-child .mat-cell {
+    border-bottom-width: 0;
+  }
+}
+
+.mat-table {
+  @extend .w-100;
+  border-collapse: separate;
+  border-spacing: 0;
+
+  tr {
+    &.mat-header-row,
+    &.mat-row,
+    &.mat-footer-row {
+      height: unset;
+    }
+  }
+
+  th {
+    background-color: $border-color;
+    white-space: nowrap;
+    font-weight: $font-weight-semibold;
+  }
+
+  td {
+    vertical-align: top;
+  }
+
+  th,
+  td {
+    font-size: $font-size-base;
+
+    &.col-checkbox,
+    &.col-actions {
+      @extend .text-center;
+    }
+
+    &.col-checkbox {
+      min-width: 56px;
+      width: 56px;
+      max-width: 56px;
+
+      > .form-check {
+        @extend .d-flex, .flex-column, .align-items-center, .justify-content-center, .mb-0;
+      }
+    }
+
+    &.col-text {
+      min-width: 360px;
+    }
+
+    &.col-isread {
+      min-width: 164px;
+      width: 164px;
+      max-width: 164px;
+    }
+
+    &.col-actions {
+      min-width: 120px;
+      width: 120px;
+      max-width: 120px;
+
+      &.wider {
+        min-width: 160px;
+        width: 160px;
+        max-width: 160px;
+      }
+    }
+  }
+
+  th.mat-header-cell,
+  td.mat-cell,
+  td.mat-footer-cell {
+    padding: 0.75rem;
+    color: $gray-700;
+  }
+
+  th.mat-header-cell {
+    font-weight: $font-weight-semibold;
+  }
+
+  mat-row,
+  mat-header-row,
+  mat-footer-row,
+  th.mat-header-cell,
+  td.mat-cell,
+  td.mat-footer-cell {
+    border-bottom-color: $border-color;
+  }
+}
