--- a/client/src/app/pages/dashboard/dashboard.component.html
+++ b/client/src/app/pages/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
     <div class="col-md-12 mt-5 pt-5" style="border-top: 1pt solid #f1f1f1">
       <div class="p-2 d-flex justify-content-between align-items-center border-bottom border-primary border-1">
         <strong>Prediksi</strong>
-        <button type="button" class="btn btn-primary" (click)="predict()" [disabled]="isLoading">Jalankan</button>
+        <button type="button" class="btn btn-primary" (click)="predict()" [disabled]="isLoading || !topikList.length">Jalankan</button>
       </div>
     </div>
   </div>
