--- a/client/src/app/pages/mahasiswa/mahasiswa-action/mahasiswa-action.component.html
+++ b/client/src/app/pages/mahasiswa/mahasiswa-action/mahasiswa-action.component.html
@@ -1,1 +1,36 @@
-<p>mahasiswa-action works!</p>
+<div class="container-fluid">
+  <div class="row justify-content-center">
+
+    <div class="col-md-10 col-lg-8 col-xl-6">
+      <div class="card mt-5">
+        <div class="card-body">
+          <form class="row g-3" [formGroup]="form" (ngSubmit)="onSubmit()">
+            <div class="col-12 mb-3">
+              <label for="nim">NIM</label>
+              <input type="text" formControlName="nim" class="form-control" id="nim" required>
+            </div>
+            <div class="col-12 mb-3">
+              <label for="nama">Nama</label>
+              <input type="text" formControlName="nama" class="form-control" id="nama" required>
+            </div>
+            <div class="col-12 mb-3">
+              <label for="prodi">Prodi</label>
+              <ng-select id="prodi" [items]="prodiList" bindValue="id" bindLabel="nama" formControlName="prodi"></ng-select>
+            </div>
+
+            <div class="col-12 d-flex align-items-center justify-content-end">
+              <button class="btn btn-light mr-2" type="button" (click)="onBack()">
+                Back
+              </button>
+              <button class="btn btn-primary" type="submit">
+                Save
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
