--- a/client/src/app/pages/mahasiswa/mahasiswa.component.html
+++ b/client/src/app/pages/mahasiswa/mahasiswa.component.html
@@ -50,7 +50,7 @@
         <!-- Type Column -->
         <ng-container matColumnDef="prodi">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Prodi </th>
-          <td mat-cell *matCellDef="let row"> {{row.prodi }} </td>
+          <td mat-cell *matCellDef="let row"> {{row.prodi_rel?.nama}} </td>
         </ng-container>
 
         <!-- Name Column -->
